--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,6 @@
 [submodule "roles/workstation"]
 	path = roles/workstation
 	url = git@github.com:archf/workstation.git
-[submodule "roles/packages"]
-	path = roles/packages
-	url = git@github.com:archf/ansible-packages.git
 [submodule "roles/openssh-server"]
 	path = roles/openssh-server
   url = git@github.com:archf/ansible-openssh-server.git
@@ -34,3 +31,9 @@
 [submodule "roles/ntpd"]
 	path = roles/ntpd
 	url = git@github.com:archf/ansible-ntpd.git
+[submodule "roles/packages"]
+	path = roles/packages
+	url = git@github.com:archf/ansible-packages.git
+[submodule "roles/common"]
+	path = roles/common
+	url = git@github.com:archf/ansible-common.git
